--- a/awards.html
+++ b/awards.html
@@ -32,11 +32,13 @@
 <h3>Awards</h3>
 <ul>
 
-<li><p>Finalist in the M&SOM Practice-Based Research Competition, 2021</p>
-    
-<li><p>2020 POMS Wickham Skinner Early-Career Research Accomplishments Award</p>
+<li><p>Finalist in the INFORMS Service Science Best Cluster Paper Award, 2021</p>
   
-<li><p>Honorable Mention in the 2020 POMS Service Operations Emerging Scholar Award</p>
+<li><p>Finalist in the 2021 M&SOM Practice-Based Research Competition, 2021</p>
+    
+<li><p>POMS Wickham Skinner Early-Career Research Accomplishments Award, 2020</p>
+  
+<li><p>Honorable Mention in the POMS Service Operations Emerging Scholar Award, 2020</p>
 
 <li><p>Finalist in the POMS College of Behavioral Operations Junior Scholar Paper Competition, 2020</p>
   
