--- a/awards.html
+++ b/awards.html
@@ -32,61 +32,63 @@
 <h3>Awards</h3>
 <ul>
 
-<li><p>Finalist in the INFORMS Service Science Best Cluster Paper Award, 2021</p>
+<li><p>2021: Finalist in the INFORMS Service Science Best Cluster Paper Award</p>
   
-<li><p>Finalist in the 2021 M&SOM Practice-Based Research Competition, 2021</p>
+<li><p>2021: Finalist in the M&SOM Practice-Based Research Competition</p>
     
-<li><p>POMS Wickham Skinner Early-Career Research Accomplishments Award, 2020</p>
+<li><p>2020: POMS Wickham Skinner Early-Career Research Accomplishments Award</p>
   
-<li><p>Honorable Mention in the POMS Service Operations Emerging Scholar Award, 2020</p>
+<li><p>2020: Honorable Mention in the POMS Service Operations Emerging Scholar Award</p>
 
-<li><p>Finalist in the POMS College of Behavioral Operations Junior Scholar Paper Competition, 2020</p>
+<li><p>2020: Finalist in the POMS College of Behavioral Operations Junior Scholar Paper Competition</p>
   
-<li><p>2020 M&SOM Meritorious Service Award</p>
+<li><p>2020: M&SOM Meritorious Service Award</p>
   
-<li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
+<li><p>2019: First Place in the Best OM Paper in Management Science Award</p>
   
-<li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
+<li><p>2019: Finalist in the INFORMS Data Mining Section Best Paper Competition</p>
   
-<li><p>Finalist in the INFORMS BOM Section Best Working Paper Competition, 2019</p>
+<li><p>2019: Finalist in the INFORMS BOM Section Best Working Paper Competition</p>
   
-<li><p>Best Paper Award in Operations and Supply Chain Management, Academy of Management, 2019</p>
+<li><p>2019: Best Paper Award in Operations and Supply Chain Management, Academy of Management</p>
   
-<li><p>Honorable Mention in the 2019 ENRE Best Publication Award in Environment and Sustainability</p>
+<li><p>2019: Honorable Mention in the ENRE Best Publication Award in Environment and Sustainability</p>
   
-<li><p>Finalist in the 2019 INFORMS Case Competition</p>
+<li><p>2019: Finalist in the INFORMS Case Competition</p>
 
-<li><p>2019 M&SOM Meritorious Service Award</p>
+<li><p>2019: M&SOM Meritorious Service Award</p>
 
-<li><p>First Place in the 2018 Best Cluster Paper Award - INFORMS Service Science</p>
+<li><p>2018: First Place in the Best Cluster Paper Award - INFORMS Service Science</p>
 
-<li><p>Finalist in the 2018 M&SOM Student Paper Competition (student: Baek Jung Kim)</p>
+<li><p>2018: Finalist in the M&SOM Student Paper Competition (student: Baek Jung Kim)</p>
 
-<li><p>First Place in the 2018 INFORMS Case Competition</p>
+<li><p>2018: First Place in the INFORMS Case Competition</p>
 
-<li><p>Best Technical Presentation, AGIFORS Annual Symposium (2018)</p>
+<li><p>2018: Best Technical Presentation, AGIFORS Annual Symposium</p>
   
-<li><p>2018 M&SOM Meritorious Service Award</p>
+<li><p>2018: M&SOM Meritorious Service Award</p>
 
-<li><p>Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science</p>
+<li><p>2017: Honorable mention in the Best Cluster Paper Award - INFORMS Service Science</p>
   
-<li><p>2017 M&SOM Meritorious Service Award</p>
+<li><p>2017: M&SOM Meritorious Service Award</p>
 
-<li><p>2016 INFORMS Revenue Management and Pricing Dissertation Award</p>
+<li><p>2016: INFORMS Revenue Management and Pricing Dissertation Award</p>
 
-<li><p>First Place in the 2016 Best Cluster Paper Award - INFORMS Service Science</p>
+<li><p>2016: First Place in the Best Cluster Paper Award - INFORMS Service Science</p>
   
-<li><p>Finalist for the 2016 Service Science Section Student Paper Competition</p>
+<li><p>2016: Finalist for the Service Science Section Student Paper Competition</p>
 
-<li><p>Finalist in the 2015 INFORMS Revenue Management and Pricing Practice Award</p>
+<li><p>2015: Finalist in the INFORMS Revenue Management and Pricing Practice Award</p>
 
-<li><p>First Place in the 2015 Best Student Paper POM Supply Chain Management</p><li><p>2015 NEDSI Conference Best Application of Theory Award</p>
+<li><p>2015: First Place in the Best Student Paper POM Supply Chain Management</p>
+  
+<li><p>2015: NEDSI Conference Best Application of Theory Award</p>
 
-<li><p>First Place in the 2014 Best Student Paper Award - INFORMS Service Science</p>
+<li><p>2014: First Place in the Best Student Paper Award - INFORMS Service Science</p>
 
-<li><p>First price at the Technion Creativity in Science and Technology competition (2007)</p>
+<li><p>2007: First price at the Technion Creativity in Science and Technology competition</p>
 
-<li><p>Best student project in the 47th Israel Annual Conference on Aerospace Sciences (2006)</p>
+<li><p>2007: Best student project in the 47th Israel Annual Conference on Aerospace Sciences</p>
  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
