--- a/research.html
+++ b/research.html
@@ -374,6 +374,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Submitted <br />
+Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </div>
 </p>
 </li>
