--- a/students.html
+++ b/students.html
@@ -52,6 +52,8 @@
   
 <li><p>Nymisha Bandi - Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
   
+<li><p>Hajime Shimao - Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai)</p>
+  
 <li><p>Thesis committee: Recep Bekci (McGill), Mehran Poursoltani (HEC Montréal), Claudio Sole (Polytechnique Montréal)</p>
 
 </ul>
