--- a/research.html
+++ b/research.html
@@ -211,7 +211,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </ol>
 
 <ol start="16">
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Forthcoming in <b>Production and Operations Management</b> <br />
+<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, <b>Production and Operations Management</b>, 2021 (published online) <br />
 </div>
 </p>
 </li>
