--- a/research.html
+++ b/research.html
@@ -357,6 +357,13 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Submitted <br />
 [<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
 Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
@@ -376,13 +383,6 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Submitted <br />
 Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, Submitted <br />
 </div>
 </p>
 </li>
