--- a/workEx.html
+++ b/workEx.html
@@ -33,7 +33,8 @@
 
 <ul>
 <li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2019-present)</a></b><br />
-<b>Professor of Retail and Operations Management (with tenure)</b><br />
+<b>Full Professor of Retail and Operations Management (with tenure)</b><br />
+<b>Scale AI Chair</b> in Data Science for Retail<br />
 Co-Director of the Retail Innovation Lab<br />
 Bensadoun Faculty Scholar<br />
 Associate Member, Electrical and Computer Engineering Department (by courtesy)<br />
