--- a/research.html
+++ b/research.html
@@ -319,12 +319,6 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ul>
 
 <ul>
-<li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Under second round of review in <b>Information Systems Research</b> (after Major Revision) <br />
-</div>
-</li>
-</ul>
-
-<ul>
 <li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under third round of review in <b>Management Science</b> (after Major Revision) <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
@@ -333,7 +327,7 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, Major Revision in <b>Production and Operations Management</b> <br />
+<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, Under second round of review in <b>Production and Operations Management</b> (after Major Revision) <br />
 Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
 </div>
 </p>
@@ -369,6 +363,12 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
 </p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Submitted <br />
+</div>
 </li>
 </ul>
 
