--- a/research.html
+++ b/research.html
@@ -292,7 +292,7 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 <h3>Under Review and Working Papers</h3>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Under third round of review in <b>Management Science</b> (after Minor Revision) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Minor Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 [<a href="https://github.com/leixiao32229/PDFC">Code</a>] <br />
 Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and to the 2020 Workshop on Mechanism Design for Social Good <br />
 </div>
