--- a/grants.html
+++ b/grants.html
@@ -36,6 +36,8 @@
 
 <li><p>2021-2022: NSERC Discovery Supplement for Early Career Researchers - $12,500; Role: PI</p>
   
+<li><p>2021-2023: IVADO Postdoctoral Research Funding (for Hajime Shimao) - $70,000; Role: Co-Supervisor</p>
+  
 <li><p>2021-2022: Mitacs Accelerate: AI-Powered Dispute Settlement (with Borden Ladner Gervais, BLG) - $60,000; Role: Co-PI (with S. Dahan)</p>
   
 <li><p>2020-2022: SSHRC Insight Development Grant: Using Data Science and Behavioral Analytics to Alleviate Traffic Congestion - $67,152; Role: PI</p>
