--- a/research.html
+++ b/research.html
@@ -417,6 +417,13 @@ Accepted for presentation at CIST 2021 and at the North American Meeting of the 
 </li>
 </ul>
 
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Available at SSRN <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
 <!--
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3292987">"The Impact of IPOs on Peer-to-Peer Lending Platforms,"</a> with K. Jiao, Working paper <br />
