--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
-Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.laps.com/"</a>Laps</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a>, <a href="https://www.rebloc.io/"</a>Rebloc.io</a> <br />
+Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.laps.com/"</a>Laps</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a>, <a href="https://www.rebloc.io/"</a>Rebloc.io</a> <br />
 <br />
 <b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management (launching Nov. 23, 2021)<br />
 Buy the book: <a href="https://www.amazon.com/MOXIC-Geometric-Rectangular-Children-Anti-Slip/dp/3030858545/ref=sr_1_1?dchild=1&keywords=Demand+Prediction+in+Retail+springer&qid=1628688454&sr=8-1">
