--- a/research.html
+++ b/research.html
@@ -228,30 +228,39 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </li>
 </ol>
 
+<ol start="18">
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Forthcoming in <b>Management Science</b> <br />
+[<a href="https://github.com/leixiao32229/PDFC">Code</a>] <br />
+Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and to the 2020 Workshop on Mechanism Design for Social Good <br />
+</div>
+</p>
+</li>
+</ol>
+
 <h3>Managerial Articles</h3>
 
-<ol start="18">
+<ol start="19">
 <li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="19">
+<ol start="20">
 <li><p><a href="https://sloanreview.mit.edu/article/how-in-store-tech-will-transform-retail/">"How In-Store Tech Will Transform Retail,"</a> with S. Zhu and S. Ray, <b>MIT Sloan Management Review</b>, 63(1):18-20, Fall 2021 Issue <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="20">
+<ol start="21">
 <li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="21">
+<ol start="22">
 <li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">"U.S. Opportunity Zones Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Published in <b>The Conversation, <a href="https://nationalpost.com/pmn/news-pmn/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely">National Post</a>, and <a href="https://ca.news.yahoo.com/u-opportunity-zones-tax-breaks-155233959.html">Yahoo News</a>,</b> 2021
 </div>
 </p>
@@ -290,15 +299,6 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 
 
 <h3>Under Review and Working Papers</h3>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Minor Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
-[<a href="https://github.com/leixiao32229/PDFC">Code</a>] <br />
-Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and to the 2020 Workshop on Mechanism Design for Social Good <br />
-</div>
-</p>
-</li>
-</ul>
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Second Major Revision in <b>Information Systems Research</b> <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
