--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2021: Best Conference Paper Nominee, Conference on Information Systems and Technology (CIST)</p>
+  
 <li><p>2021: Finalist in the INFORMS Service Science Best Cluster Paper Award</p>
   
 <li><p>2021: Finalist in the M&SOM Practice-Based Research Competition</p>
