--- a/research.html
+++ b/research.html
@@ -404,6 +404,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Submitted <font color="red"<b>(NEW)</b></font> <br />
+Best Conference Paper Nominee, Conference on Information Systems and Technology (CIST) <br />
 Accepted for presentation at CIST 2021 and at the North American Meeting of the Urban Economics Association <br />
 </div>
 </p>
