--- a/research.html
+++ b/research.html
@@ -301,7 +301,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 <h3>Under Review and Working Papers</h3>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3274628">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, Minor Revision in <b>Manufacturing & Service Operations Management</b> (after Major Revision) <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3274628">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Selected as Best Paper at the 2019 Academy of Management Meeting and accepted to the <i>2019 MSOM Service SIG</i><br />
 Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a> <br />
 Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalist in the 2020 POMS College of Behavioral Operations Junior Scholar Paper Competition <br />
