--- a/research.html
+++ b/research.html
@@ -311,7 +311,7 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Second Major Revision in <b>Information Systems Research</b> <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Under third round of review in <b>Information Systems Research</b> (after two Major Revisions) <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
 Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
 </div>
 </p>
