--- a/research.html
+++ b/research.html
@@ -358,6 +358,15 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Major Revision in <b>Marketing Science</b> <br />
+Best Conference Paper Nominee, Conference on Information Systems and Technology (CIST) <br />
+Accepted for presentation at CIST 2021 and at the North American Meeting of the Urban Economics Association <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Submitted <br />
 [<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
 Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
@@ -397,15 +406,6 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Submitted <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Submitted <font color="red"<b>(NEW)</b></font> <br />
-Best Conference Paper Nominee, Conference on Information Systems and Technology (CIST) <br />
-Accepted for presentation at CIST 2021 and at the North American Meeting of the Urban Economics Association <br />
 </div>
 </p>
 </li>
