--- a/research.html
+++ b/research.html
@@ -268,7 +268,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 </ol>
   
 <ul>
-<li><p><a href="">"Leveraging Data & AI to Excel in a Post-Pandemic Retail World,"</a> with M. Krause, Y. Adulyasak, and W. Khern-am-nuai, Submitted <br />
+<li><p><a href="">"Retail Analytics in a Post-Pandemic World,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
 </div>
 </p>
 </li>
