--- a/teaching.html
+++ b/teaching.html
@@ -53,6 +53,13 @@ Elective course for Master of Management in Analytics. Evaluations: 5, 5 (out of
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><b><a href="">Data-Driven Retail Decisions - McGill University - 2022 </a></b><br />
+Elective course for Master of Management in Retailing
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><b><a href="">Service Analytics - McGill University - 2020 & 2021 </a></b><br />
