--- a/students.html
+++ b/students.html
@@ -48,9 +48,11 @@
 
 <li><p>Xiao Lei - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub)</p>
   
-<li><p>Zahra Jalali - Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
+<li><p>Zahra Jalali - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
   
-<li><p>Nymisha Bandi - Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
+<li><p>Sandeep Chitla - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
+  
+<li><p>Nymisha Bandi - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
   
 <li><p>Hajime Shimao - Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai)</p>
   
@@ -81,6 +83,8 @@
 <li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
 <li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
+
+<li><p>Ken Lee - Waterloo UG Computer Engineering (co-advisor with Derek Nowrouzezahrai)</p> 
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
