--- a/research.html
+++ b/research.html
@@ -219,7 +219,8 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </ol>
 
 <ol start="17">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://maxccohen.github.io/Incentivizing-Commuters-to-Carpool.pdf">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, <b>Manufacturing & Service Operations Management</b>, 2022 (published online) <br />
+<a href="https://maxccohen.github.io/Carpool-Appendix.pdf">Online Appendix</a> <br />
 <a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
 Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
