--- a/research.html
+++ b/research.html
@@ -283,6 +283,13 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </li>
 </ol>
 
+<ol start="25">
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Provisionally accepted to <b>MIT Sloan Management Review</b> <br />
+</div>
+</p>
+</li>
+</ol>
+
 <ul>
 <li><p><a href="">"Retail Analytics in a Post-Pandemic World,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
 </div>
@@ -421,13 +428,6 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <font color="red"<b>(NEW)</b></font> <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Available at SSRN <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
