--- a/research.html
+++ b/research.html
@@ -284,7 +284,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </ol>
 
 <ol start="25">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Provisionally accepted to <b>MIT Sloan Management Review</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Provisionally accepted in <b>MIT Sloan Management Review</b> <br />
 </div>
 </p>
 </li>
