--- a/research.html
+++ b/research.html
@@ -427,7 +427,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <br /> <!-- <font color="red"<b>(NEW)</b></font> <br /> -->
 </div>
 </p>
 </li>
