--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> 
 Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.laps.com/"</a>Laps</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://www.ecoprice.shop/home"</a>EcoPrice</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a>, <a href="https://www.rebloc.io/"</a>Rebloc.io</a> <br />
 <br />
 <b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management (launching Jan. 3, 2022)<br />
-Buy the book: <a href="https://www.amazon.com/MOXIC-Geometric-Rectangular-Children-Anti-Slip/dp/3030858545/ref=sr_1_1?dchild=1&keywords=Demand+Prediction+in+Retail+springer&qid=1628688454&sr=8-1">
+Buy the book: <a href="https://www.amazon.com/Demand-Prediction-in-Retail_-A-Practical-Guide-to-Leverage-Data-and-Predictive-Analytics-_Springer-Series-in-Supply-Chain-Management_-14_/dp/3030858545/ref=sr_1_1?crid=12NRC5PC3U50I&keywords=demand+prediction+retail+springer&qid=1640713972&sprefix=demand+prediction+retai+springer%2Caps%2C51&sr=8-1">
 Amazon.com</a>, 
 <a href="https://www.amazon.ca/Demand-Prediction-Retail-Practical-Predictive/dp/3030858545/ref=sr_1_1?dchild=1&keywords=Demand+Prediction+in+Retail+springer&qid=1628688559&sr=8-1">
 Amazon.ca</a>,
