--- a/research.html
+++ b/research.html
@@ -300,7 +300,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 <h3>Books and Book Chapters</h3>
 
 <ul>
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2022), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management, Forthcoming
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3-030-85855-1)
 </div>
 </p>
 </li>
