--- a/research.html
+++ b/research.html
@@ -307,7 +307,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </ul>
 
 <ul>
-<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2022), <a href="">"Precision Retailing,"</a> <b>University of Toronto Press</b>, in progress
+<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="">"Precision Retailing,"</a> <b>University of Toronto Press</b>, Forthcoming, 2022
 </div>
 </p>
 </li>
