--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Associate Director for Strategy and Partnership @<a href="https://conflictanalyt
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
 Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.laps.com/"</a>Laps</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://www.ecoprice.shop/home"</a>EcoPrice</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a>, <a href="https://www.rebloc.io/"</a>Rebloc.io</a> <br />
 <br />
-<b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management (launching January 2022)<br />
+<b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3-030-85855-1)<br />
 Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
 Amazon.com</a>, 
 <a href="https://www.amazon.ca/dp/3030858545/ref=cm_sw_em_r_mt_dp_PPHW9S8RYS23BF6NXFMK">
