--- a/news.html
+++ b/news.html
@@ -32,6 +32,9 @@
 <h3>In the News</h3>
 <ul>
 
+  
+<li><p><a href="https://www.mcgill.ca/desautels/article/mma-program/prof-maxime-cohen-launches-new-guide-demand-prediction-retail">Prof. Maxime Cohen Launches New Guide to Demand Prediction in Retail</a>, McGill Desautels News, January 2022</p>
+  
 <li><p><a href="https://www.yahoo.com/now/scale-ai-announces-four-ai-142700622.html">SCALE AI Announces Four New AI Research Chairs that will Undoubtedly Stimulate AI Innovation in Canada</a>, Yahoo Finance, December 2021</p>
  
 <li><p><a href="https://reporter.mcgill.ca/scale-ai-announces-research-chair-in-data-science-for-retail-at-mcgill-university/">SCALE AI Announces Research Chair in Data Science for Retail at McGill University</a>, McGill Reporter, December 2021</p>
