--- a/news.html
+++ b/news.html
@@ -32,6 +32,7 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-mess-heres-how-we-can-fix-it-11641396921">Opinion: IPO disclosure is a mess; here’s a simple way to fix it</a>, MarketWatch, January 2022</p>
   
 <li><p><a href="https://www.mcgill.ca/desautels/article/mma-program/prof-maxime-cohen-launches-new-guide-demand-prediction-retail">Prof. Maxime Cohen Launches New Guide to Demand Prediction in Retail</a>, McGill Desautels News, January 2022</p>
   
