--- a/research.html
+++ b/research.html
@@ -285,6 +285,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 
 <ol start="25">
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Provisionally accepted in <b>MIT Sloan Management Review</b> <br />
+Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-mess-heres-how-we-can-fix-it-11641396921">MarketWatch</a> <br />
 </div>
 </p>
 </li>
