--- a/students.html
+++ b/students.html
@@ -78,7 +78,7 @@
   
 <li><p>Paul-Emile Gras (2020) - McGill Master in Analytics. First Position: Virtuo, Data Scientist</p>
   
-<li><p>Zacharie Houle (2021) - McGill UG Integrated Management Fellow. First Position: Ernst & Young, Insurance Intern</p>
+<li><p>Zacharie Houle (2021) - McGill UG Integrated Management Fellow. First Position: Ernst & Young, Staff Accountant</p>
   
 <li><p>Tiancheng Zhang (2021) - McGill Master in Analytics. First Position: Cardinal Operations, Operations Research Algorithms Engineer</p>
   
