--- a/students.html
+++ b/students.html
@@ -56,7 +56,7 @@
   
 <li><p>Hajime Shimao - Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai)</p>
 
-<li><p>Florian Golemo - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
+<li><p>Banafsheh Asadi - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
 <li><p>Thesis committee: Recep Bekci (McGill), Mehran Poursoltani (HEC Montréal), Claudio Sole (Polytechnique Montréal)</p>
 
