--- a/research.html
+++ b/research.html
@@ -292,7 +292,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New normal,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
 </div>
 </p>
 </li>
