--- a/research.html
+++ b/research.html
@@ -249,7 +249,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 <h3>Managerial Articles</h3>
 
 <ol start="20">
-<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
+<li><p><a href="https://maxccohen.github.io/MBR-Promotions-Analytics.pdf">"Using Business Analytics to Upgrade Sales Promotions,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, <b>Management and Business Review</b>, 1(3):54-63, 2022 <br />
 </div>
 </p>
 </li>
