--- a/news.html
+++ b/news.html
@@ -31,7 +31,9 @@
 </div>
 <h3>In the News</h3>
 <ul>
-
+  
+<li><p><a href="https://www.rethink.industries/top-retail-influencers-2022/">RETHINK Retail's Top Retail Influencers of 2022</a>, RETHINK Retail, January 2022</p>
+ 
 <li><p><a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-mess-heres-how-we-can-fix-it-11641396921">Opinion: IPO Disclosure is a Mess; Here’s a Simple Way to Fix it</a>, MarketWatch, January 2022</p>
   
 <li><p><a href="https://www.mcgill.ca/desautels/article/mma-program/prof-maxime-cohen-launches-new-guide-demand-prediction-retail">Prof. Maxime Cohen Launches New Guide to Demand Prediction in Retail</a>, McGill Desautels News, January 2022</p>
