--- a/research.html
+++ b/research.html
@@ -414,7 +414,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, Working paper <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, Submitted <br /> 
 </div>
 </p>
 </li>
