--- a/research.html
+++ b/research.html
@@ -434,6 +434,13 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </li>
 </ul>
 
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Submitted <br /> <font color="red"<b>(NEW)</b></font> <br /> 
+</div>
+</p>
+</li>
+</ul>
+
 <!--
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3292987">"The Impact of IPOs on Peer-to-Peer Lending Platforms,"</a> with K. Jiao, Working paper <br />
