--- a/research.html
+++ b/research.html
@@ -435,7 +435,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Submitted <br /> <font color="red"<b>(NEW)</b></font> <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Submitted <font color="red"<b>(NEW)</b></font> <br /> 
 </div>
 </p>
 </li>
