--- a/research.html
+++ b/research.html
@@ -377,7 +377,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Major Revision in <b>Marketing Science</b> <br />
 Best Conference Paper Nominee, Conference on Information Systems and Technology (CIST) <br />
-Accepted for presentation at CIST 2021 and at the North American Meeting of the Urban Economics Association <br />
+Accepted for presentation at CIST 2021, the 2021 North American Meeting of the Urban Economics Association, and the 2022 Frank M. Bass FORMS Conference <br />
 </div>
 </p>
 </li>
