--- a/research.html
+++ b/research.html
@@ -336,7 +336,7 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ul>
 
 <ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Minor Revision in <b>Management Science</b> (after Major Revision) <br />
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, Minor Revision in <b>Management Science</b> <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
