--- a/research.html
+++ b/research.html
@@ -239,7 +239,8 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 </ol>
 
 <ol start="19">
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, Forthcoming in <b>Production and Operations Management</b> <br />
+<li><p><a href="https://maxccohen.github.io/Two_Sided_Competition.pdf">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, <b>Production and Operations Management</b>, 2022 (published online) <br />
+<a href="https://maxccohen.github.io/Two_Sided_Competition_Appendix.pdf">Online Appendix</a> <br />
 Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
 </div>
 </p>
