--- a/students.html
+++ b/students.html
@@ -82,8 +82,10 @@
   
 <li><p>Tiancheng Zhang (2021) - McGill Master in Analytics. First Position: Cardinal Operations, Operations Research Algorithms Engineer</p>
   
-<li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
+<li><p>Niloofar Tarighat (2022) - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
+<li><p>Uzair Ahmad (2022) - McGill Master in Analytics</p>
+  
 <li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
 
 <li><p>Ken Lee - Waterloo UG Computer Engineering (co-advisor with Derek Nowrouzezahrai)</p> 
