--- a/research.html
+++ b/research.html
@@ -438,6 +438,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Submitted <font color="red"<b>(NEW)</b></font> <br /> 
+Aaccepted to the Conference on Empirical Legal Studies <br />
 </div>
 </p>
 </li>
