--- a/research.html
+++ b/research.html
@@ -385,6 +385,14 @@ Accepted for presentation at CIST 2021, the 2021 North American Meeting of the U
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Submitted <br />
 [<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
 Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
@@ -402,14 +410,6 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on the Residential Real Estate Market,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Submitted <br />
-Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </div>
 </p>
 </li>
