--- a/research.html
+++ b/research.html
@@ -345,6 +345,15 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Minor Revision in <b>Operations Research</b> <br />
+[<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
+Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Under third round of review in <b>Information Systems Research</b> (after two Major Revisions) <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
 Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
 </div>
@@ -387,15 +396,6 @@ Accepted for presentation at CIST 2021, the 2021 North American Meeting of the U
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Submitted <br />
-[<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
-Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
 </p>
 </li>
