--- a/students.html
+++ b/students.html
@@ -42,9 +42,9 @@
 
 <li><p>Carlos Fernandez (2021) - IS Ph.D. student at  NYU (advisor: Foster Provost). First position: Assistant Professor of Information Systems at HKUST</p>
   
-<li><p>Park Sinchaisri - (2021) - OID Ph.D. student at Wharton (advisor: Gad Allon). First position: Assistant Professor of Operations & Information Technology at UC Berkeley Haas School of Business </p>
+<li><p>Park Sinchaisri (2021) - OID Ph.D. student at Wharton (advisor: Gad Allon). First position: Assistant Professor of Operations & Information Technology at UC Berkeley Haas School of Business </p>
     
-<li><p>Haotian Song - OM Ph.D. student at NYU (advisor: Wenqiang Xiao)</p>
+<li><p>Haotian Song (2022) - OM Ph.D. student at NYU (advisor: Wenqiang Xiao). First position: Assistant Professor of Operations Management at Zhejiang University, School of Management</p>
 
 <li><p>Xiao Lei - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub)</p>
   
