--- a/research.html
+++ b/research.html
@@ -327,6 +327,14 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 <h3>Under Review and Working Papers</h3>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Conditionally Accepted in <b>Information Systems Research</b> <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
+Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3274628">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Selected as Best Paper at the 2019 Academy of Management Meeting and accepted to the <i>2019 MSOM Service SIG</i><br />
 Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a> <br />
@@ -348,14 +356,6 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Minor Revision in <b>Operations Research</b> <br />
 [<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
 Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Under third round of review in <b>Information Systems Research</b> (after two Major Revisions) <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
-Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
 </div>
 </p>
 </li>
