--- a/workEx.html
+++ b/workEx.html
@@ -36,7 +36,7 @@
 <b>Full Professor of Retail and Operations Management (with tenure)</b><br />
 <b>Scale AI Chair</b> in Data Science for Retail<br />
 Co-Director of the Retail Innovation Lab<br />
-Bensadoun Faculty Scholar<br />
+Bensadoun Faculty Scholar (2019-2022)<br />
 Associate Member, Electrical and Computer Engineering Department (by courtesy)<br />
 Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportation
 </p>
